			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

************************* Version 8.04c: *********************************

IMP: (12/1/05, SMR) Making windows fill the screen works right in MDI mode.

BUG: (12/1/05, SMR) Initial cell display doesn't fill the window (Bug #562).
FIX: In WindowFrame.createEditWindow(), set window size properly.

IMP/MAN: (12/1/05, SMR) Cell Properties lets you specify the font of text cells (Bug #662).
     Changed the layout of the "text" preferences tab.

BUG: (11/30/05, SMR) PostScript text scale is wrong (Bug #763).
FIX: Increased PostScript text size.

BUG: (11/30/05, SMR) Pasting shows undisplayable cell variables (Bug #760);
FIX: In Clipboard.paste() ignore variables that are not displayed.

IMP/MAN (11/30/05, SMR) New commands in Tool / Simulation (Built-in):
     "Save Waveform Window Configuration to Disk..." and
     "Restore Waveform Window Configuration from Disk..." remember the waveform
     window configuration (Bug #704).

BUG: (11/30/05, SMR) Menu text sometimes appears in the edit window (Bug #765).
FIX: In PixelDrawing.java, make text drawing use a non-static buffer.

BUG: (11/30/05, SMR) Some dialogs don't follow the main window (Bug #581).
FIX: Removed "setLocation()" from GetInfoNode, GetInfoExport, and GetInfoText.
     Also remember the messages window location.

IMP: (11/30/05, SMR) Reduced the amount of memory used by signals (Bug #712).

IMP: (11/30/05, DN) Command-line switch "-server" to dump snapshot trace. 

IMP: (11/29/05, GVG) More changes related to the DISPLAY dependency while running batch jobs.
Ability to reconcile options in batch mode (some code in OptionReconcile.java moved to Pref so it
can be used in batch mode).

IMP: (11/29/05, SMR) Waveform panels use offscreen buffers (Bug #239).

BUG: (11/29/05, SMR) Redoing text changes may crash (Bug #762).